.kubernetes/aws/svc-cluster-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app-name svc-go-fraud
  namespace: test-a
  labels:
    app: *app-name
spec:
  clusterIP: None
  ports:
  - port: 50052
    targetPort: 50052
    protocol: TCP
  selector:
    app: go-fraud
