.kubernetes/aws/svc-nlb-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app-name svc-go-fraud
  namespace: test-a
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-name: nlb-go-fraud
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: GRPC
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-attributes: deletion_protection.enabled=false
spec:
  ports:
  - name: http
    port: 50052
    targetPort: 50052
    protocol: TCP
  type: LoadBalancer
  selector:
    app: go-fraud
