.kubernetes/aws/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: go-fraud-allow-all-traffic
  namespace: test-a
spec:
  podSelector:
    matchLabels:
      app: go-fraud
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: test-a
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
            - 10.214.64.0/18
          except:
            - 10.214.128.0/18
          except:
            - 10.214.192.0/18
      ports:
      - protocol: TCP
        port: 50052
      - protocol: TCP
        port: 443
      - protocol: TCP
        port: 80
